--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - docker tag udagram_feed bravytech/udagram_feed:v2022_1   # Do similar for other three images
   - docker tag udagram_user bravytech/udagram_user:v2022_1   # Do similar for other three images
   - docker tag udagram_frontend bravytech/udagram_frontend:v2022_1   # Do similar for other three images
-  - docker tag reverseproxy bravytech/udagram_reverseproxy:v2022_1   # Do similar for other three images
+  - docker tag udagram_reverseproxy bravytech/udagram_reverseproxy:v2022_1   # Do similar for other three images
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
