--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yaml build --parallel  #Build parallel
   - echo "---------------->  Project build successfully  <--------------------"
-  - docker tag udagram_feed bravytech/udagram_feed:v2022_1   # Do similar for other three images
-  - docker tag udagram_user bravytech/udagram_user:v2022_1   # Do similar for other three images
-  - docker tag udagram_frontend bravytech/udagram_frontend:v2022_1   # Do similar for other three images
-  - docker tag udagram_reverseproxy bravytech/udagram_reverseproxy:v2022_1   # Do similar for other three images
+  - docker tag udagram_feed:latest bravytech/udagram_feed:v2022_1   # Do similar for other three images
+  - docker tag udagram_user:latest bravytech/udagram_user:v2022_1   # Do similar for other three images
+  - docker tag udagram_frontend:latest bravytech/udagram_frontend:v2022_1   # Do similar for other three images
+  - docker tag udagram_reverseproxy:latest bravytech/udagram_reverseproxy:v2022_1   # Do similar for other three images
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
